Finished 2nd revision comments except for appendix

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -510,7 +510,7 @@ $W:P$, mean wall-to-plan ratio &0.4  \\ \hline
 \end{tabular}
 \end{table}
 
-The 2015 imagery used here for the model domain was 13 years after the 2002 imagery used in \cite{Coutts2007}. An analysis by \cite{Nury2015} of the Darebin Council area (55.6 km$^{2}$) (which includes Preston) was available, developed using aerial imagery from 2009 and LIDAR data from 2008. This was compared because the land surface classification was much improved in terms of accuracy (due to higher quality and higher resolution imagery) than that of \cite{Coutts2007} and provided a more recent set of land surface data (Table \ref{tab:expertValues}). Some differences in the classification were seen, with the Nury (2015) classification showing a lower building fraction and a higher impervious surfaces. Further, some reduction in vegetation cover is seen between the \cite{Coutts2007} classification and the \cite{Nury2015} classification. This introduces a small amount of uncertainly in the exact make-up of the modelling domain and could explain some of the low predictions of Q$_{E}$ seen later in this validation. While this dataset is at a different scale and from a later time period, it does show good agreement with the total impervious/pervious fraction of the 500m classification.
+The 2015 imagery used here for the model domain was 13 years after the 2002 imagery used in \cite{Coutts2007}. An analysis by \cite{Nury2015} of the Darebin Council area (55.6 km$^{2}$) (which includes Preston) was available, developed using aerial imagery from 2009 and LIDAR data from 2008. This was compared because the land surface classification was much improved in terms of accuracy (due to higher quality and higher resolution imagery) than that of \cite{Coutts2007} and provided a more recent set of land surface data (Table \ref{tab:expertValues}). Some differences in the classification were seen, with the Nury (2015) classification showing a lower building fraction and a higher impervious surfaces. Further, some reduction in vegetation cover is seen between the \cite{Coutts2007} classification and the \cite{Nury2015} classification. This introduces a small amount of uncertainly in the exact make-up of the modelling domain and could explain some of the low predictions of Q$_{E}$ seen later in this validation. While this dataset is at a different scale and from a later time period, it does show very good agreement with the total impervious/pervious fraction of the 500m classification.
 
 
 Model parameters were set to the values given in Table \ref{tab:modprvalpara} and domain parameter values in Table \ref{tab:expertValues}. Most of these values are TUF-3D default values, from \cite{Krayenhoff2007}. The modelled domain is a digitisation of the AOI, Oakhill Ave. in Preston (Figure \ref{fig:PrestonModArea}) with building locations and heights as shown in Figure \ref{fig:PrestonBldHt}.
@@ -538,7 +538,7 @@ Constant building internal floor temperature (\SI{}{\degreeCelsius})  & 15.0  & 
 \caption{Preston validation domain configured building heights (0, 5, 10m) and locations for modelling scenario Pr04Val.\label{fig:PrestonBldHt}}      
 \end{figure}
 
-As all the vegetation parameterisations in VTUF-3D are pluggable, individual elements are added to a domain using a specific set of configuration files with many of the physical properties scaled from a base template.  Including additional vegetation types (trees, shrubs, and ground cover) into VTUF-3D can be added by populating templates with parameter values based on observations or literature values. Two tree types were employed here, namely \textit{Olea europaea} (Olive) and \textit{Lophostemon Confertus} (Queensland brushbox), as well as turf grass, tall fescue \textit{Festuca arundinacea} (tall fescue). The detailed parameterisations for these vegetation types are shown in \ref{sec:maespavegpara}. A mix of 25\%/75\% \textit{Olea europaea} and \textit{Lophostemon Confertus}) trees were used in the model. Identifying and parametrising every tree species in the domain can be time consuming, so our parametrisations were limited here to these species. The species mix was chosen to best account for density of canopy cover in the aerial imagery but given this limitation, will not completely reflect the observed species mix and might create some modelling errors from the observed fluxes. However, the two available species are representative of commonly planted trees in Melbourne. A street tree inventory by \cite{Frank2006} finds that brushbox, a native evergreen, is the most common street tree, representing 6.9\% of street trees in Melbourne. Olive trees are considered suitable for Melbourne's climate conditions (drought tolerant evergreen) and a recommended species for council street tree planting \citep{PortPhillip2010}.
+As all the vegetation parameterisations in VTUF-3D are pluggable, individual elements are added to a domain using a specific set of configuration files with many of the physical properties scaled from a base template.  Including additional vegetation types (trees, shrubs, and ground cover) into VTUF-3D can be added by populating templates with parameter values based on observations or literature values. Two tree types were employed here, namely \textit{Olea europaea} (Olive) and \textit{Lophostemon Confertus} (Queensland brushbox), as well as turf grass, \textit{Festuca arundinacea} (Tall Fescue). The detailed parameterisations for these vegetation types are shown in \ref{sec:maespavegpara}. A mix of 25\%/75\% \textit{Olea europaea} and \textit{Lophostemon Confertus}) trees were used in the model. Identifying and parametrising every tree species in the domain can be time consuming, so our parametrisations were limited here to these species. The species mix was chosen to best account for density of canopy cover in the aerial imagery but given this limitation, will not completely reflect the observed species mix and might create some modelling errors from the observed fluxes. However, the two available species are representative of commonly planted trees in Melbourne. A street tree inventory by \cite{Frank2006} finds that \textit{Lophostemon Confertus}, a native evergreen, is the most common street tree, representing 6.9\% of street trees in Melbourne. Olive trees are considered suitable for Melbourne's climate conditions (drought tolerant evergreen) and a recommended species for council street tree planting \citep{PortPhillip2010}.
 
 The validation simulation (which is named Pr04Val) was run for 30 days, from 10 February 2004 to 10 March 2004, forced by the observations, from \cite{Coutts2007} for those days. Meteorological forcing included $K\downarrow$, $L\downarrow$, air temperature, wind speed, wind direction, and air pressure at a height of 40m. Forcing data for the vegetation components use shortwave values of mean global and mean diffuse observations taken from one minute solar observations (station 086282, Melbourne Airport) \citep{BOM2016}. For full radiation vegetation runs, the mean global irradiance was used while for diffuse runs, the mean diffuse irradiance was used. In addition, the MAESPA FBEAM variable (fraction of incident PAR which is direct-beam) is set to 0.0 in the forcing data for diffuse runs.
 
@@ -566,7 +566,7 @@ IntercomparisonIntegrated & \cite{Best2012} intercomparison performance mean of 
 \section{Results}
 \subsection{Validation of VTUF-3D}
 
-Figure \ref{fig:Preston30Day4} presents the mean diurnal pattern for each component of the surface energy balance ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$)  over the 30 day validation period. The observed individual fluxes were aggregated into hourly averages over the 30 days and compared with the model output. VTUF-3D was able to reproduce the important dynamics of this area as seen in the component fluxes. In the observations, the $Q_{H}$ and $Q_{G}$ fluxes dominate the urban area, with modest amounts of $Q_{E}$ fluxes, peaking under 100W m$^{-2}$ during the daytime and falling to roughly zero at night-time. This was also seen in the model, with $Q_{H}$ and $Q_{G}$ dominated the surface energy balance, while $Q_{E}$ was relatively small. VTUF-3D captures closely both the magnitude and diurnal cycle of $Q_{H}$, with a slight under-prediction during the morning and a slight over-prediction during the late mornings. VTUF-3D also captures closely the cycles of $Q^{*}$. The very small divergence between the predicted and observed values can be explained through the dual sources of values of $K\downarrow$ in the forcing data, a distance of approximately 20 km between Preston and the Melbourne Airport observation site, providing varying values as a component of the calculated $Q^{*}$ which are then compared to only the Preston observations. $Q_{G}$ shows close agreement except for a slight over-prediction during the mornings, an over-prediction at mid-day, a slight over-prediction during the afternoon cooling period, and a very slight over-prediction during the evening. 
+Figure \ref{fig:Preston30Day4} presents the mean diurnal pattern for each component of the surface energy balance ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$)  over the 30 day validation period. The observed individual fluxes were aggregated into hourly averages over the 30 days and compared with the model output. VTUF-3D was able to reproduce the important dynamics of this area as seen in the component fluxes. In the observations, the $Q_{H}$ and $Q_{G}$ fluxes dominate the urban area, with modest amounts of $Q_{E}$ fluxes, peaking under 100W m$^{-2}$ during the daytime and falling to roughly zero at night-time. This was also seen in the model, with $Q_{H}$ and $Q_{G}$ dominated the surface energy balance, while $Q_{E}$ was relatively small. VTUF-3D captures closely both the magnitude and diurnal cycle of $Q_{H}$, with a slight under-prediction during the morning and a slight over-prediction during the late mornings. VTUF-3D also captures closely the cycles of $Q^{*}$. The very small divergence between the predicted and observed values can be explained through the dual sources of values of $K\downarrow$ in the forcing data, a distance of approximately 20 km between Preston and the Melbourne Airport observation site, providing varying values as a component of the calculated $Q^{*}$ which are then compared to only the Preston observations. $Q_{G}$ shows close agreement except for a slight over-prediction during the mornings, and at mid-day, a slight under-prediction during the afternoon cooling period, and a very slight over-prediction during the evening. 
 
 
 \begin{figure}[!htbp] 
@@ -575,18 +575,18 @@ Figure \ref{fig:Preston30Day4} presents the mean diurnal pattern for each compon
 \end{figure}
 
 
-In terms of absolute values, in 30 day monthly hourly averages, peaking daily values of $Q_{H}$ at 1300 are 314 W m$^{-2}$ in observed values compared to modelled values of 294. For the other fluxes, $Q_{E}$, $Q^{*}$, and $Q_{G}$, these values are 93 vs. 40, 621 vs. 612, and 213 vs. 266 W m$^{-2}$. An error analysis of d (index of agreement) for the Pr04Val validation (Figure 6) shows d values of 0.964, 0.652, 0.998, and 0.957 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. Error analysis of RMSE (W m$^{-2}$) shows values of 40.2, 33.1, 19.0,and 52.5. As an extension to the TUF-3D model, the addition of vegetation and associated $Q_{E}$ fluxes to VTUF-3D have created a large improvement to the model. As will be seen in the Intercomparison results (Section \ref{sec:interresults}), as well as in the results of this intercomparison project \citep{Grimmond2011,Best2012}, land surface modelling schemes that include vegetation perform better than those that do not. In addition, schemes that integrate vegetation perform better than those who use a tiling method to include the vegetation. Another important result from this intercomparison project is that $Q_{E}$ is the least well modelled flux across a range of urban land surface modelling schemes \citep{Grimmond2010}. Even the SUEWS model, which includes vegetation, as well as a very complete urban hydrology, tends to under-estimate $Q_{E}$ fluxes during day-time \citep{Jarvi2011}.
+In terms of absolute values, in 30 day monthly hourly averages, peaking daily values of $Q_{H}$ at 1300 are 314 W m$^{-2}$ in observed values compared to modelled values of 294. For the other fluxes, $Q_{E}$, $Q^{*}$, and $Q_{G}$, these values are 93 vs. 40, 621 vs. 612, and 213 vs. 266 W m$^{-2}$. An error analysis of d (index of agreement) for the Pr04Val validation (Figure 6) shows d values of 0.964, 0.652, 0.998, and 0.957 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. Error analysis of RMSE (W m$^{-2}$) shows values of 40.2, 33.1, 19.0,and 52.5. As an extension to the TUF-3D model, the addition of vegetation and associated $Q_{E}$ fluxes to VTUF-3D have created a large improvement to the model. As will be seen in the Intercomparison results (Section \ref{sec:interresults}), as well as in the results of this intercomparison project \citep{Grimmond2011,Best2012}, land surface modelling schemes that include vegetation perform better than those that do not. In addition, schemes that integrate vegetation perform better than those who use a tiling method that treats the urban canyon and vegetation separately. Another important result from this intercomparison project was that $Q_{E}$ is the least well modelled flux across a range of urban land surface modelling schemes \citep{Grimmond2010}. Even the SUEWS model, which includes vegetation, as well as a very complete urban hydrology, tends to under-estimate $Q_{E}$ fluxes during day-time \citep{Jarvi2011}.
 
 \begin{figure}[!htbp]
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04Val-ErrorPlots.png}
 \caption{Pr04Val scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Preston6error}}   
 \end{figure}
 
-It is anticipated that the innovative method taken in this project, the first time vegetation has been tiled and incorporated into a micro-scaled surface energy balance model, will bring performance improvements over the previous version of the model which did not consider vegetation. This will be seen to be the case, shown in the the results of the Pr04NoVeg no vegetation validation scenario (Section \ref{sec:baselinenoveg}). In addition to the improved modelling performance, the addition of vegetation modelling has dramatically improved the applicability of VTUF-3D to a wide range of modelling problems. Indeed, without this addition, the main aim of this model, to determine the thermal comfort improvements due to urban vegetation and water would not be possible. 
+It is anticipated that the innovative method taken in this project, the first time vegetation has been tiled and incorporated into a micro-scaled surface energy balance model in this manner, will bring performance improvements over the previous version of the model which did not consider vegetation. This will be seen to be the case, shown in the the results of the Pr04NoVeg no vegetation validation scenario (Section \ref{sec:baselinenoveg}). In addition to the improved modelling performance, the addition of vegetation modelling has dramatically improved the applicability of VTUF-3D to a wide range of modelling problems. Indeed, without this addition, the main aim of this model, to determine the thermal comfort improvements due to urban vegetation and water would not be possible. 
 
 Despite these improvements to the modelling tool, the fluxes of $Q_{E}$ show some divergences from the observations. This was anticipated as there are three current limitations of VTUF-3D that can account for low $Q_{E}$ levels, and need addressing in future versions of the model. The first is not accounting for precipitation on impervious surfaces. Many spikes of $Q_{E}$ fluxes are seen in the observations shortly after rainfall. \cite{Demuzere2014} found evaporation from impervious surfaces in urban areas after rainfall can contribute to an approximately 10\% increase of $Q_{E}$ over a two month period, while \cite{Wouters2013} found increases of 45 W m$^{-2}$ in $Q_{E}$ for up to 12 hours of daylight following rainfall. Until this portion of precipitation received is accounted for in the model, care should be taken when modelling periods which contain precipitation.
 
-The second limitation is not accounting for irrigation. While Melbourne was under Stage 2 water restrictions during the observation/modelling period \citep{MelbourneWater2016a}, there would have been some amount of irrigation occurring to contribute to greater observed $Q_{E}$ fluxes than modelled. Estimates of household irrigation during February 2004 are of frequencies of 2.8 times a week (3.1 for only the homes which irrigate) with average irrigation flows of 16.3 LpM and average durations of 46 minutes per irrigation event \citep{Roberts2005}. This is an important limitation which needs addressing as quantifying the benefits of irrigation as part of WSUD is an intended use of this model. The third limitation is the full diversity of vegetation and trees of the modelled area are not represented in the modelled domain. In this study, parametrisations were included for grass, brushbox, and olive trees. However, this is not a limitation in the model itself, as any type of vegetation can be plugged into the model. To overcome this deficit, more work needs to be done. Completion of each parametrisation is a time consuming process requiring numerous observations of tree physiology specifications. A standard limitation of many empirical models requiring a choice of either deciduous or evergreen vegetation does not exist in the model itself as these new vegetation types can include either, as long as the proper observations and parametrisations are completed on each type.
+The second limitation is not accounting for irrigation. While Melbourne was under Stage 2 water restrictions during the observation/modelling period \citep{MelbourneWater2016a}, there would have been some amount of irrigation occurring to contribute to greater observed $Q_{E}$ fluxes than modelled. Estimates of household irrigation during February 2004 are of frequencies of 2.8 times a week (3.1 for only the homes which irrigate) with average irrigation flows of 16.3 LpM and average durations of 46 minutes per irrigation event \citep{Roberts2005}. This is an important limitation which needs addressing as quantifying the benefits of irrigation as part of WSUD is an intended use of this model. The third limitation is the full diversity of vegetation and trees of the modelled area are not represented in the modelled domain. In this study, parametrisations were included for grass and two evergreen tree species. However, this is not a limitation in the model itself, as any type of vegetation can be plugged into the model. To overcome this deficit, more work needs to be done. Completion of each parametrisation is a time consuming process requiring numerous observations of tree physiology specifications, or specifying parameters from the literature. A standard limitation of many empirical models requiring a choice of either deciduous or evergreen vegetation does not exist in the model itself as these new vegetation types can include either, as long as the proper observations and parametrisations are completed on each type.
 
 
 Another consideration is that the under-prediction of $Q_{E}$ is likely contributing to the over-estimating of $Q_{G}$ (calculated as a residual in MAESPA vegetation tiles). An improvement in modelling of the $Q_{E}$ fluxes will likely lead to an improvement in the modelled $Q_{G}$ fluxes. Finally, values of $Q_{F}$, anthropogenic heat (W m$^{-2}$), are not accounted for in the VTUF-3D model, but which do contribute to the total $Q_{H}$ fluxes in the observations. Flux values for this modelling and observation period (summertime) are anticipated to contribute peaks of over 15 W m$^{-2}$ for low density areas of cities and peaks of 30-60 W m$^{-2}$ for medium density areas \citep{Sailor2004}. In both the observations and modelling results, these unaccounted fluxes will be present in the errors for the four observed and modelled fluxes.
@@ -595,7 +595,7 @@ There will remain an amount of uncertainty in comparing the modelled results to 
 
 \subsection{No vegetation scenario}\label{sec:baselinenoveg}
 
-Figure \ref{fig:Prestonnoveg30day} presents a 30 day hourly average of both the Pr04Val and Pr04NoVeg scenarios with the Pr04Val showing a much closer fit for all fluxes over a diurnal cycle. Figure \ref{fig:Prestonnovegerror} presents each component of the surface energy balance for the no vegetation scenario (Pr04NoVeg). These values show an improvement over the unimproved VTUF-3D model. The unimproved model yields results of d of 0.906, 0.0, 0.989, and 0.877 and $RMSE$ (W m$^{-2}$) of 87.0, 47.1, 51.6, 75.9 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. As an unimproved model, $Q_{H}$ is significantly over-predicted during the afternoon and under-predicted in the evenings. Flux $Q_{G}$ is under-predicted during the afternoons. Finally, $Q_{E}$ is not implemented in the model, so cannot be predicted at all. 
+Figure \ref{fig:Prestonnoveg30day} presents a 30 day hourly average of both the Pr04Val and Pr04NoVeg scenarios with the Pr04Val showing a much closer fit for all fluxes over a diurnal cycle. Figure \ref{fig:Prestonnovegerror} presents each component of the surface energy balance for the no vegetation scenario (Pr04NoVeg). These values show an improvement over the unimproved VTUF-3D model. The unimproved model yields results of d of 0.906, 0.0, 0.989, and 0.877 and RMSE (W m$^{-2}$) of 87.0, 47.1, 51.6, 75.9 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. As an unimproved model, $Q_{H}$ is significantly over-predicted during the afternoon and under-predicted in the evenings. Flux $Q_{G}$ is under-predicted during the afternoons. Finally, $Q_{E}$ is not implemented in the model, so cannot be predicted at all. 
 
 
 \begin{figure}[!htbp]
@@ -616,7 +616,7 @@ Figure \ref{fig:Prestonnoveg30day} presents a 30 day hourly average of both the 
 
 Using the RMSE values for fluxes $Q^{*}$, $Q_{H}$, $Q_{G}$ from Phase 4 of the Intercomparison project, the performance of the Pr04NoVeg scenario (as well as the Pr04NoVeg scenario) can be compared against the performance of 24 other urban land surface models. The RMSE values are taken from Figure 2 of \cite{Best2012}, for the Feb/Mar period, corresponding to the period for which the validation scenarios were run. 
 
-A comparison of Intercomparison RMSE results vs. modelled results is shown in Table \ref{fig:prestonrmse}. In Phase 4 comparisons, for all fluxes, models with integrated vegetation had the lowest $RMSE$ values. These were followed by tiled vegetation models while models without vegetation had the highest values. In comparison, the VTUF-3D Pr04Val scenario had lower $RMSE$ values for all fluxes except $Q_{E}$ than each of the Phase 4 three model categories. For $Q_{E}$, the VTUF-3D scenario Pr04Val performed better than the no vegetation category, but with slightly higher errors than the tiled and integrated categories. In terms of absolute differences between $RMSE$ values for the best performing Intercomparison model category, Pr04Val scenario $RMSE$ values differed by -6, -5, -25, and 7 W m$^{-2}$ for $Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$ respectively.
+A comparison of Intercomparison RMSE results vs. modelled results is shown in Table \ref{fig:prestonrmse}. In the Phase 4 comparisons, for all fluxes, models with integrated vegetation had the lowest RMSE values. These were followed by tiled vegetation models while models without vegetation had the highest values. In comparison, the VTUF-3D Pr04Val scenario had lower RMSE values for all fluxes except $Q_{E}$ than each of the Phase 4 three model categories. For $Q_{E}$, the VTUF-3D scenario Pr04Val performed better than the no vegetation category, but with slightly higher errors than the tiled and integrated categories. In terms of absolute differences between RMSE values for the best performing Intercomparison model category, Pr04Val scenario RMSE values differed by -6, -5, -25, and 7 W m$^{-2}$ for $Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$ respectively.
 
 \begin{center}
 \begin{table}[!htbp]
