--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -354,7 +354,7 @@ where $k_{1}$ is the thermal conductivity of the surface (W m$^{-1}$ K$^{-1}$) ,
 %%\nomenclature{$W_{i}$}{water storage of the layer $i$ (mm)} 
 %\nomenclature{$k_{L}$}{total leaf-specific hydraulic conductance (mmol m$^{-2}$s$^{-1}$MPa$^{-1}$)} 
 
-\subsection{Tmrt and UTCI}\label{sec:tmrtutci}
+\subsection{$T_{mrt}$ and UTCI}\label{sec:tmrtutci}
 
 VTUF-3D provides output of incoming and outgoing shortwave and longwave radiation and $T_{sfc}$ for each facet (surface) at each timestep. Air temperature for the canyon, $T_{can}$ (calculated in Section \ref{sec:tempprof}) is also provided for each timestep. Using these and values of vapour pressure from the forcing data and wind speed at street level (calculated in Section \ref{sec:convection}), the values for $T_{mrt}$ and UTCI are calculated for each surface. Options in the model are available to either calculate $L\downarrow$, using the clear sky formula of \cite{Prata1996}, or use forcing values. Based on this, different options can be used to calculate the following equations.
 
@@ -676,7 +676,8 @@ Model configuration process was developed in Java using the JRE 1.7.0 \citep{Ora
 %% The Appendices part is started with the command \appendix;
 %% appendix sections are then done as normal sections
 \appendix
-
+\setcounter{table}{0}
+\renewcommand{\thetable}{A\arabic{table}}
 
 %\subsection{}                               %% Appendix A1, A2, etc.
 
@@ -684,22 +685,7 @@ Model configuration process was developed in Java using the JRE 1.7.0 \citep{Ora
 %%%%%%%%%% taking out parameterizations
 \section{MAESPA vegetation parameterisations}\label{sec:maespavegpara}  
 %
-%The physiological properties of the two selected trees and grass were integrated into the configuration files. All parameterisations used in this study share some common attributes, summarised in Table \ref{tab:commonattr}.
-%
-%\begin{table}[!htbp]
-%\caption{MAESPA tree parameterisations common attributes. \label{tab:commonattr}} 
-%\begin{tabular}{ |  p{13cm} | p{4cm} |}
-%\hline \textbf{Parameter} & \textbf{Value}  \\ 
-%\hline
-%Stomatal conductance model & Ball-Berry-Opti model \citep{Medlyn2011} \\ \hline
-%Number of layers in the crown assumed when calculating radiation interception &6	 \\ \hline
-%Number of points per layer&12 \\ \hline
-%Number of zenith angles for which diffuse transmittances are to be integrated &5   \\ \hline
-%Number of azimuth angles for which diffuse transmittances are to be integrated&11  \\ \hline
-%\end{tabular} 
-%\end{table}
-%
-%\subsection{MAESPA olive tree (\textit{Olea europaea}) parameterisation}
+
 The first complete parameterisation for VTUF-3D is the olive tree (\textit{Olea europaea}). It has been selected because it is a species commonly found in gardens in Melbourne, considered suitable for Melbourne's climate conditions (drought tolerant evergreen), and a recommended species for council street tree planting \citep{PortPhillip2010}. In addition, observations of parameters are available from \cite{Coutts2014a}. The physical and meteorological parameters for a 5x5 meter grid square are given in Table \ref{tab:olivescaled}. Physiology parameter values are shown in Table \ref{tab:oliveparam}. The second complete parameterisation for VTUF-3D is the  brushbox tree (\textit{Lophostemon Confertus}). This tree is chosen because it is the most common street tree in Melbourne \citep{Frank2006}, where all of the validation observations data sets are based. This tree has also been the basis of a number of research projects in Melbourne, providing a parameterisation through \cite{Coutts2016} and \cite{Coutts2015ICUC}. The third complete parameterisation for VTUF-3D is for grass, tall fescue (\textit{Festuca arundinacea}), a common turf grass. This is an important parameterisation for modelling urban environments as a significant portion of urban surfaces are grass. As will be seen in the VTUF-3D validation (forthcoming paper), estimates of observed grass cover, for example in a validation based on observations from Preston in Melbourne \citep{Coutts2007,Nury2015}, range from 11\% to 23\%. 
 
 This parameterisation is an adaptation of the normal MAESPA tree parameterisations. In it, the vegetation is modelled as a box shaped canopy with a crown height of 0.2 meters. This and the rest of the physical and meteorological parameters for a 5x5 meter grid square are given in Table \ref{tab:olivescaled}, with physiology parameter values (Table \ref{tab:oliveparam}) taken from the literature.
@@ -756,12 +742,6 @@ Specific leaf area (mm$^{2}$kg$^{-1}$)&5.1 &\cite{Mariscal2000}  &25.3 &\cite{Wr
 }
 \end{table}
 \end{center}
-
-
-
-
-
-%\section{Symbol list}\label{sec:symbollist}    %% Appendix B
 
 
 
